# animaco

./: CMakeLists.txt  main.cpp
lib/animaco/: Animation.cpp  Animation.h  Arc.cpp  Arc.h  CMakeLists.txt  CircularPane.cpp  CircularPane.h  Color.cpp  Color.h  ConsoleDriver.cpp  ConsoleDriver.h  DrawingBuffer.cpp  DrawingBuffer.h  OutputDriver.cpp  OutputDriver.h  Pixel.cpp  Pixel.h
